# mos-vis

./: .gitignore  CMakeLists.txt  README.md  SystemDesgin.md  SystemDesign.md  ws.json
config/: config.json
docs/: architecture.md  asr_ab_tuning_validation.md  logging_rules.md  logging_rules_v2.md  reliability.md  security.md  state_machine.md  state_machine_transition_map.md  state_machine_transition_map_v2.md  state_machine_v3-PLAN.md  state_machine_v3.md  two_layer_plan.md
include/mos/vis/agent/: voice_interactive_agent.h
include/mos/vis/asr/: asr_engine.h
include/mos/vis/audio/: audio_capture.h  audio_device_selector.h  audio_input.h  audio_output.h  audio_playback.h  audio_ring_buffer.h  port_audio_guard.h
include/mos/vis/common/: logging.h  status.h  types.h
include/mos/vis/config/: app_config.h  config_loader.h
include/mos/vis/control/: control_client.h  control_engine.h
include/mos/vis/core/: voice_interactive_agent.h
include/mos/vis/engines/: asr_engine.h  intent.h  kws_engine.h  nlu_engine.h  tts_engine.h  vad_engine.h
include/mos/vis/kws/: kws_engine.h
include/mos/vis/nlu/: nlu_engine.h
include/mos/vis/pipeline/: pipeline_router.h  pipelines.h
include/mos/vis/runtime/: pipeline_scheduler.h  pipeline_stage.h  session_context.h  session_controller.h  session_state.h  stage_factory.h  state_machine_controller.h  vis_event.h  vis_guard_action.h
include/mos/vis/runtime/stages/: asr_stage.h  control_notification_stage.h  executing_stage.h  kws_stage.h  recognizing_stage.h  tts_stage.h  vad1_stage.h  vad2_stage.h
include/mos/vis/runtime/subsm/: hotspot_subsms.h  transition_map.h
include/mos/vis/tts/: tts_engine.h
include/mos/vis/util/: logging.h  ring_buffer.h
include/mos/vis/vad/: vad_engine.h
packaging/: mos-vis.service
scripts/: check_logging_usage.sh
src/: CMakeLists.txt
src/agent/: voice_interactive_agent.cc
src/asr/: asr_engine_sherpa.cc
src/audio/: audio_capture.cc  audio_device_selector.cc  audio_playback_portaudio.cc  audio_ring_buffer.cc  port_audio_guard.cpp
src/common/: logging.cc  status.cc
src/config/: app_config.cc  config_loader.cpp
src/control/: control_client.cpp  control_engine_simple.cc
src/core/: voice_interactive_agent.cpp
src/engines/: stub_engines.cpp
src/kws/: kws_engine_sherpa.cc
src/nlu/: nlu_engine_simple.cc
src/pipeline/: pipeline_router.cpp
src/runtime/: pipeline_scheduler.cc  session_controller.cc  stage_factory.cc  state_machine_controller.cc
src/runtime/stages/: asr_stage.cc  control_notification_stage.cc  executing_stage.cc  kws_stage.cc  recognizing_stage.cc  tts_stage.cc  vad1_stage.cc  vad2_stage.cc
src/runtime/subsm/: hotspot_subsms.cc
src/server/: main.cc  main.cpp
src/tts/: tts_engine_sherpa.cc  tts_engine_vits_melo.cc
src/util/: logging.cpp
src/vad/: vad_engine_rknn.cc
tests/: CMakeLists.txt  agent_lifecycle_test.cpp  config_loader_test.cpp  control_client_test.cpp  pipeline_router_test.cpp  ring_buffer_test.cpp
